dxr/tests/trybuild/enum.stderr
error: proc-macro derive panicked
 --> tests/trybuild/enum.rs:3:10
  |
3 | #[derive(FromDXR)]
  |          ^^^^^^^
  |
  = help: message: Deriving FromDXR for enums and unions is not supported.
