dxr/tests/trybuild/enum.rs
use dxr::FromDXR;

#[derive(FromDXR)]
pub enum Enum {
    Variant,
}

fn main() {}
